[gd_scene format=3 uid="uid://pause-overlay"]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://scripts/UIButtonFeedback.gd" type="Script" id=2]

[node name="PauseOverlay" type="Control"]
script = ExtResource( 1 )
anchors_preset = 15
visible = false
mouse_filter = 1

[node name="Backdrop" type="ColorRect" parent="PauseOverlay"]
anchors_preset = 15
color = Color(0, 0, 0, 0.55)

[node name="Panel" type="Panel" parent="PauseOverlay"]
anchors_preset = 5
margin_left = 240
margin_right = -240
margin_top = 400
margin_bottom = -400

[node name="ButtonStack" type="VBoxContainer" parent="Panel"]
separation = 16
alignment = 1

[node name="Resume" type="Button" parent="ButtonStack"]
script = ExtResource( 2 )
text = "Resume"

[node name="Restart" type="Button" parent="ButtonStack"]
script = ExtResource( 2 )
text = "Restart"

[node name="MainMenu" type="Button" parent="ButtonStack"]
script = ExtResource( 2 )
text = "Main Menu"

[connection signal="pressed" from="Resume" to="." method="_on_resume"]
[connection signal="pressed" from="Restart" to="." method="_on_restart"]
[connection signal="pressed" from="MainMenu" to="." method="_on_back"]
